Rewrite some Commune focuses

--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -51,7 +51,7 @@ FRA_1941_election:0 "The Internationale's Strength"
 ### Ideas ###
 
 FRA_communard_spirit:0 "Communard Spirit"
-FRA_communard_spirit_desc:0 "We are the legacy of the Paris Commune, the first socialist state ever created, and brutally repressed by the Republican reactionaries. In 1920, the workers finally got their revenge and overthrew the military junta of the 'Party of Order'. We, sons and daughters of Communards must protect our state and our spirit, we will not be commanded by tyrants anymore!"
+FRA_communard_spirit_desc:0 "We are the legacy of the Paris Commune, the first socialist state ever created and then brutally repressed by the Republican reactionaries. In 1920, the workers finally got their revenge and overthrew the military junta of the 'Party of Order'. We, sons and daughters of Communards must protect our state and our spirit, we will not be commanded by tyrants anymore!"
 
 FRA_bad_intel:0 "Inefficient Intelligence"
 FRA_bad_intel_desc:0 "Ever since the Party of Order tried to stifle the worker's uprising in France, the idea of a centralised intelligence service is seen by many as a hallmark of the reactionary oppression of the post-Weltkrieg social movements. As a result, the Commune's intelligence services are limited to extremely scrutinised intelligence committees to prevent a repeat of this situation."
@@ -139,7 +139,7 @@ FRA_amenagement_idea:0 "Aménagement of the Territory"
 FRA_amenagement_idea_desc:0 "France has historically been a very centralised country, meaning that most of the development has been limited to industrial cities and population centres. We have funded large projects to ensure that all parts of our territory are developed to a satisfactory manner."
 
 FRA_plan_prost_idea:0 "Plan Prost"
-FRA_plan_prost_idea:0 "Henri Prost's plans for highways linking the Paris suburbs has proved to be popular across the country. Many other municipalities like Lyon or Marseille have also signed up to the plan, and projects are already being drawn for a large highway network linking all of France's major cities together, from Lille to Toulouse."
+FRA_plan_prost_idea_desc:0 "Henri Prost's plans for highways linking the Paris suburbs has proved to be popular across the country. Many other municipalities like Lyon or Marseille have also signed up to the plan, and projects are already being drawn for a large highway network linking all of France's major cities together, from Lille to Toulouse."
 
 FRA_paramilitary_gendarmes:0 "Paramilitary Gendarmes"
 FRA_paramilitary_gendarmes_desc:0 "The Gendarmes are a fine organisation, a paramilitary police force capable of both civilian and military activities. While many have pushed to completely disband them, we will instead expand their activities to make them a parallel force to the French Communal Police."
@@ -227,48 +227,47 @@ FRA2_FOR_SORE:0 "Anarchiste Foreign Policy in the 1941 Elections"
 ### Focii ###
 
 FRA_amenagement:0 "Aménagement du Territoire"
-FRA_amenagement_desc:0 "Our territory is vast and unequally developed, leaving some regions away from the economic prosperity of the country. We must encourage initiatives to solve that problem on a local and federal level."
+FRA_amenagement_desc:0 "Our territory is vast and unequally developed, some rural regions having been left behind while others prosper and grow at spectacular rates. We must encourage local initiatives and consider ambitious infrastructure projects to solve that problem on a local and national level."
 FRA_hydroelectricity:0 "Hydroelectricity"
-FRA_hydroelectricity_desc:0 "Our mountainous regions in the east and the south have plenty of high-flow rivers, a perfect environment to install a clean and lasting source of energy and revitalise some backwards regions of the Commune."
+FRA_hydroelectricity_desc:0 "Our mountainous regions in the Alpes and the Massif Central have plenty of high flow rivers, a perfect environment to install a clean and lasting source of energy and revitalise the backwards, rural mountainous regions of the Commune."
 FRA_swiss_hydroelectricity:0 "Swiss Hydroelectricity"
-FRA_swiss_hydroelectricity_desc:0 "Our recent integration of Romandie into the Commune lead us to find several perfect spots for hydroelectricity, especially in Valais. Our leading engineers think that expanding our dams in the region would be greatly beneficial."
+FRA_swiss_hydroelectricity_desc:0 "Our recent integration of Romandie into the Commune lead us to find several perfect spots for hydroelectricity as an extension of our existing network in the Alpes, especially in Valais. Our leading engineers are certain that expanding our dams in the region would be greatly beneficial to our economy."
 FRA_chemins_de_fer:0 "Office des Chemins de Fer"
-FRA_chemins_de_fer_desc:0 "A congress over the infrastructure status at the BGT showed the disorganisation of our rail system and how backwards it became. The congress agreed on the need to create a new office specifically designed for the development and the maintenance of our railways to connect all the parts of France together."
+FRA_chemins_de_fer_desc:0 "A Congress meeting over the status of France's infrastructure at the BGT showed the disorganisation of our rail system and how backwards it became. The Congress agreed on the need to create a new office specifically tasked with the development and maintenance of our railways to connect all the parts of France together."
 FRA_mining_expansion:0 "Mining Expansion"
-FRA_mining_expansion_desc:0 "The economic and infrastructural development of the regions of the Alps and the Massif Central allowed for a greater exploitation of the resources available there. We discovered new mineral deposits and are now ready to start exploiting them!"
+FRA_mining_expansion_desc:0 "The economic and infrastructural development of the regions of the Alpes and the Massif Central allows for a greater exploitation of the mineral resources available there. Our prospectors discovered new mineral deposits and we are now ready to start exploiting them on an industrial scale!"
 FRA_plan_prost:0 "Plan Prost"
-FRA_plan_prost_desc:0 "The engineer and urbanist Henri Prost, member of the commission for the Aménagement du Territoire came up with a plan to develop highways around the Parisian region to link the suburbs and allow for bigger plans later on. This idea was not only supported but the BGT also decided to fund new projects concerning the expansion of high-speed roads in the Commune. It's said that communes like Marseille and Lyon already asked him to design highway development plans in their respective communes."
+FRA_plan_prost_desc:0 "The engineer and urbanist Henri Prost came up with a plan to develop highways around the Parisian region to link the outlying suburbs. This idea is receiving widespread support and the BGT decided to fund new projects to expand highways through the Commune. The communes of Marseille and Lyon also asked him to draw highway plans for their respective communes."
 FRA_autoroutes:0 "The Autoroutes"
-FRA_autoroutes_desc:0 "The highways proved their efficiency in close urban areas, now they are to be expanded in the whole country! Liking the biggest communes better can only benefit the revolution."
-
+FRA_autoroutes_desc:0 "The highways proved a massive boon to the economy and worker mobility in urban regions, now an ambitious plan has been put forward to expand them to the whole country! Linking every corner of our country will have a massive impact on our regional development and can only benefit the Revolution."
 FRA_eco_direction:0 "Direction of the Economy"
-FRA_eco_direction_desc:0 "Our economy needs to be directed with a firm hand and a distinct policy from one of the Commune's faction."
+FRA_eco_direction_desc:0 "While our economy is more fair to the workers and generally quite potent when reactionary economies like and die on the whims of capitalists, internal conflicts have prevented us from steering our economy. Is is time to call for a meeting of the BGT, so that these questions are once and for all settled by one the Commune's faction."
 FRA_orth_syndicalism:0 "Orthodox Syndicalism"
-FRA_orth_syndicalism_desc:0 "A Travailleur man got elected as the head of economic affairs and is now pushing for an orthodox form of syndicalism. The policy that brought the Commune from a bourgeois economy to a successful syndicalist one can only be good!"
+FRA_orth_syndicalism_desc:0 "Benoît Frachon is the new economy minister of the Commune. A Travailleur, he is a proponent of Orthodox Syndicalism, a policy rather familiar to most as it is the one that has guided France for the last two decades. With some reforms, we will not have to choose between stability for efficiency."
 FRA_reduce_unemploy:0 "Reducing Unemployment"
-FRA_reduce_unemploy_desc:0 "Beyond the Rhine unemployment is at an all-time high, we need to make sure that here the worker will always have a job to feed his family."
+FRA_reduce_unemploy_desc:0 "Beyond the Rhine, unemployment is at an all-time high, we must ensure that the French worker will always have a job to feed his family. In this simple task of providing our people with the fruit of their sustainance, we prove our inherent superiority to the capitalist economies and their constant crises."
 FRA_work_design_coop:0 "Worker-Designer Cooperation"
-FRA_work_design_coop_desc:0 "By increasing the cooperation between the workers and the designers we'll improve our production techniques. This can only be beneficial to us and to the unity of our people."
+FRA_work_design_coop_desc:0 "By increasing the cooperation between the scientists and engineers behind designs and concepts and the workers who actually build them, we will rapidly improve our production techniques. This also allows us to rapidly educate our workforce to new techniques, by letting the designers directly teach the workers about them."
 FRA_improve_manage:0 "Improve Management of Unions"
-FRA_improve_manage_desc:0 "The Unions that are now directing the economy have some holes in their rules and can be mismanaged quite badly, leading to disastrous results for our economy. We need to make sure that the unions are always managed correctly to make them more efficient."
+FRA_improve_manage_desc:0 "The Unions that have for long been directing the economy, but they have some gaps and loopholes in their rules that can be exploited, leading to disastrous results for our economy. However, we will not question the place of the unions in our country. Instead, we will tighten management and rewrite some work codes."
 FRA_dedication:0 "Sense of Dedication"
-FRA_dedication_desc:0 "The workers has to know that he is working for the greater good of the Commune, by making him feel invested in his work we'll improve our national spirit and our productivity."
+FRA_dedication_desc:0 "The workers has to realise that he is working for the greater good of the Commune and the French people as a whole. He must feel invested in his work at all times, and it is this way that we will improve our national spirit and our productivity. No need for whips or oppressive business owners."
 FRA_fac_towns:0 "Factory Towns"
-FRA_fac_towns_desc:0 "Our plan to expand the Commune's industrial base can be supported by the establishment of new towns especially designed to be a home for workers, and their factories."
+FRA_fac_towns_desc:0 "Our plan to rapidly expand the Commune's industrial base can be supported by the establishment of new factory towns, cities specially designed to provide housing and modern commodities to them and their families, while making sure they live close to their workplaces."
 FRA_Industrialisation:0 "Communal Industrialisation"
-FRA_Industrialisation_desc:0 "A Jacobin man got elected as the head of economic affairs and is now pushing for a quick industrialisation of the Commune. Even if we partially caught up on the Germans despite our lateness industry-wise we are still lagging behind, we need to expand our industry fast."
+FRA_Industrialisation_desc:0 "Jean Jérôme is the new economy minister of the Commune. A Jacobin, he is a proponent of Industralisation. While our country has always been one of the modern economies of Europe, we cannot yet compare to the Ruhr Valley. Only by ambitious industrial base expansion can we hope to measure to Germany."
 FRA_inter_coop:0 "International Cooperation"
-FRA_inter_coop_desc:0 "Even if our technical expertise is one of the best in the world you can always learn from others and studying production techniques in friendly countries might benefit us."
+FRA_inter_coop_desc:0 "While our technical expertise is one of the best in the world, it is too easy to ignore any breakthroughs that are made in friendly countries on a false pretense of superiority. From new production techniques to management theories, we must stay observant and borrow anything that could benefit our own economy."
 FRA_war_eco_agri: "War Economy and Agriculture"
-FRA_war_eco_agri_desc:0 "A Sorelian man got elected as the head of economic affairs and is now pushing for a conversion to a war economy along with a development of the agriculture. We know that a war with Germany will be coming fast and we need to be strongly prepared for it, an improved agriculture will also help to supply our soldiers."
+FRA_war_eco_agri_desc:0 "Jacques Doriot is the new economy minister of the Commune. A Sorelian, he is a proponent of his 'War, Economy and Agriculture' theory, calling for a rapid conversion to a war economy along with an ambitious development of the agriculture. Should the German reactionaries attack, we will certainly have a use for the rifles and the bread."
 FRA_modern_farms: "Modern Farms"
-FRA_modern_farms_desc:0 "We must develop the mechanisation of our countryside in order to help our farmers, and our supply lines."
+FRA_modern_farms_desc:0 "Farming has been a staple of civilisation since ancient times, and yet it has profoundly changed in just one century. Recent tools like tractors allow a single farmer to harvest fields in a single day that would have required dozens of farmers and a week in the past. Let's mechanise our farms, to put more food in our platters and our rations."
 FRA_war_industry: "A War Industry"
-FRA_war_industry_desc:0 "Our economy is still heavily turned towards the production of civilian goods and is not suited for a European war, we need to develop our production of arms and equipment if we want to defend the Commune against external threats."
+FRA_war_industry_desc:0 "Despite rising animosity from Germany, our economy is still mostly dedicated to the production of civilian goods and is not suited for a major war. We need to develop our production of arms and equipment if we are to defend the Commune against external threats efficiently."
 FRA_mass_production: "Mass Production"
-FRA_mass_production_desc:0 "We have a lot of soldiers and men, logically we'll also need a lot of weapons. We must search new ways to improve our production of small arms."
+FRA_mass_production_desc:0 "Our enemies are many, and our army is quite large as a result. This army needs a lot of equipment, and this clearly puts a strain on our factories. We must search new ways to improve our production of small arms through both design and manufacturing, without cutting corners."
 FRA_cooperatives: "Cooperatives"
-FRA_cooperatives_desc:0 "An Anarchiste man got elected as the head of economic affairs and is now pushing for a development of Cooperatives in the Commune. The Commune is primarily a state working for its workers, it must seek the best conditions for them and letting them manage their own company is a good way to start."
+FRA_cooperatives_desc:0 "Daniel Guérin is the new economy minister of the Commune. An Anarchiste, he is a proponent of Cooperatives. The Commune's government is primarily here to serve its workers, and it must ensure the best working conditions for them. Letting them manage their own companies is a good way to start."
 FRA_decentralized_industry: "Decentralised Industry"
 FRA_decentralized_industry_desc:0 "The industry needs to be decentralised from the capital and big cities. The people don't live only in Paris, Lille or Lyon but everywhere in France, all regions need to be developed equally."
 FRA_market_socialism: "Market Socialism"
