more work on SPR events

--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -6,6 +6,20 @@ cntfai_supported:0 "supported the CNT-FAI"
 cntfai_given_refuge:0 "has given refuge to the CNT-FAI"
 cntfai_kicked_out:0 "refused to help the CNT-FAI"
 
+### Tooltips ###
+SPR_ban_carlists:0 "Carlists will be banned from §Y[SPR.GetNameDef]§!\n"
+SPR_arrest_javier:0 "An attempt will be made to arrest §YDuke Javier§! and his immediate followers\n"
+SPR_encourage_javier:0 "§YDuke Javier§! will be praised and encouraged\n"
+SPR_ban_cntfai:0 "§YCNT-FAI§! will be banned from [SPR.GetNameDef]\n"
+SPR_arrest_cntfai:0 "An attempt will be made to arrest the leaders of the §YCNT-FAI§!\n"
+SPR_force_cntfai:0 "Use force to disperse §YCNT-FAI§! supporters and keep them from organizing\n"
+SPR_allow_cntfai:0 "§YCNT-FAI§! will be allowed to operate within [SPR.GetNameDef]\n"
+SPR_free_elections:0 "Elections will soon be held, open to any party\n"
+SPR_rig_elections:0 "Elections will soon be held, disallowing Carlists or CNT-FAI\n"
+SPR_become_CNT:0 "§Y[SPR.GetNameDef]§! becomes §Y[CNT.GetNameDef]§!\n"
+SPR_become_CAR:0 "§Y[SPR.GetNameDef]§! becomes §Y[CAR.GetNameDef]§!\n"
+SPR_cancel_election:0 "The elections will be §Rcanceled§!\n"
+
 ### Ideas ###
 SPR_memories_of_the_republic:0 "Memories of the Republic"
 SPR_black_monday:0 "Spain is hit by the Black Monday"
@@ -76,10 +90,10 @@ sprd.7.a:0 "Any help is better than no help"
 
 sprd.8.t:0 "Javier's Ambitions to the Throne"
 sprd.8.d:0 "Following his recent diplomatic successes abroad, Carlist leader Javier has given another speech. He uses his successes to claim himself more suited to run this country than King Alfonso."
-sprd.8.a:0 "Time to ban his organisation."
+sprd.8.a:0 "Time to ban his organisation"
 sprd.8.b:0 "Arrest Javier and his followers!"
-sprd.8.c:0 "Praise his efforts."
-sprd.8.e:0 "Ignore the pretender."
+sprd.8.c:0 "Praise his efforts"
+sprd.8.e:0 "Ignore the pretender"
 
 sprd.9.t:0 "Bombing!"
 sprd.9.d:0 "Last night, one of our commanders was killed in a bombing incident."
@@ -87,35 +101,35 @@ sprd.9.a:0 "Curses!"
 
 sprd.10.t:0 "Carlist Protests"
 sprd.10.d:0 "Supporters of the Carlist movement have taken to the streets to protest our government, calling our recent policies 'godless'."
-sprd.10.a:0 "Disperse them."
+sprd.10.a:0 "Disperse them"
 
 ### General Assassinations ###
 
 sprd.11.t:0 "Assassination!"
 sprd.11.d:0 "Yesterday, late at night, after a long day debating the status of our country's internal security, our current administration's Chief of Security, Miguel Ponte Mansó de Zúñiga, was gunned down on his way home from work."
-sprd.11.a:0 "May he rest in peace."
+sprd.11.a:0 "May he rest in peace"
 
 sprd.12.t:0 "Assassination!"
 sprd.12.d:0 "Last night, José Ungría Jiménez, the Minister of Intelligence, was killed by a car bomb on his way home from work!"
-sprd.12.a:0 "Oh my."
+sprd.12.a:0 "Oh my"
 
 ### CNT-FAI Chain ###
 
 sprd.13.t:0 "The CNT-FAI"
 sprd.13.d:0 "The anarcho-syndicalist union of the CNT-FAI are one of the greatest threats to His Majesty's Government. Yesterday, Joaquin Maur匤 Juli・, a leader in the movement made a speech entitled 'My Heroes' in which he stated that the CNT will attempt to organise all laid off workers in an effort to save the country's economy."
-sprd.13.a:0 "Ban the organisation of workers."
-sprd.13.b:0 "Arrest the leaders of the movement."
-sprd.13.c:0 "Forcefully disband the movement."
-sprd.13.e:0 "Allow this to happen."
+sprd.13.a:0 "Ban the organisation of workers"
+sprd.13.b:0 "Arrest the leaders of the movement"
+sprd.13.c:0 "Forcefully disband the movement"
+sprd.13.e:0 "Allow this to happen"
 
 sprd.14.t:0 "The CNT-FAI protests"
 sprd.14.d:0 "CNT-FAI supporters have taken to the streets to protest our government's policies"
-sprd.14.a:0 "Disperse them."
+sprd.14.a:0 "Disperse them"
 
 sprd.15.t:0 "CNT-FAI launch nationwide protests"
 sprd.15.d:0 "In response to our banning of their effort to organize the unemployed the CNT have launched a national protest campaign."
 sprd.15.a:0 "Send out the police!"
-sprd.15.b:0 "Allow them to organise."
+sprd.15.b:0 "Allow them to organise"
 
 sprd.16.t:0 "Arresting the Leaders of the CNT-FAI"
 sprd.16.d:0 "Our police moved to arrest the leaders of the CNT-FAI, but we have found none. There must be a rat in our police! The leaders are probably underground or out of the country"
@@ -132,11 +146,11 @@ sprd.18.a:0 "Watch them carefully"
 
 sprd.19.t:0 "CNT-FAI start operations!"
 sprd.19.d:0 "The CNT-FAI have announced that they are opening a series of public projects and mining operations along the southern coast. Organised in a communal system, these operations are loosely controlled from their headquarters in a small town called Agua Amarga."
-sprd.19.a:0 "Let them work."
+sprd.19.a:0 "Let them work"
 
 sprd.20.t:0 "The mines and roads are opening"
 sprd.20.d:0 "The CNT-FAI's operations in the southern part of our country are steadily reaching their planned production. The organisation has put the workers to good use. Everything seems to be going very well"
-sprd.20.a:0 "Well shall see where this goes."
+sprd.20.a:0 "Well shall see where this goes"
 
 ### elections
 
@@ -146,8 +160,8 @@ sprd.21.a:0 "Ohh no!"
 
 sprd.22.t:0 "Alfonso is in a Coma"
 sprd.22.d:0 "While the current condition of His Majesty is stable, he has not yet regained consciousness - the King is in a coma. Our country's best It is unknown whether or not he will every recover from this travesty. Our political enemies are demanding action be taken to change the government of Spain forever!"
-sprd.22.a:0 "Call for open elections"
-sprd.22.b:0 "Elections, but selected parties"
+sprd.22.a:0 "Call for free and open elections"
+sprd.22.b:0 "Call for elections, but with only selected parties"
 sprd.22.c:0 "The King is not dead! Do nothing!"
 
 sprd.23.t:0 "General Elections"
