Fix up Commune's loc

--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -877,9 +877,9 @@ FRA_light_medium_armor:0 "Automitrailleuses"
 FRA_light_medium_armor_desc:0 "By law, the Infantry control all tank forces. The lighter, faster cavalry 'vehicles' or Automitrailleuses are better suited for travel and can still deal some damage with their mounted weapons."
 FRA_army_reform:0 "Army Reform"
 FRA_army_reform_desc:0 "No infantry unit or high tech tank alone will win us the war. We must put our efforts into developing both our tactical and strategical capabilities. With the right people on the job we can evolve as an army."
-FRA_navy_focus:0 "Navy Focus"
-FRA_navy_focus_tt:0 "Not enough building slots for §YNaval Base§!"
-FRA_navy_focus_desc:0 "If we plan to expand our navy the first step is to improve and expand our naval bases. Our unique ships require constant attention to stay combat ready at all times."
+#FRA_navy_focus:0 "Navy Focus"
+#FRA_navy_focus_tt:0 "Not enough building slots for §YNaval Base§!"
+#FRA_navy_focus_desc:0 "If we plan to expand our navy the first step is to improve and expand our naval bases. Our unique ships require constant attention to stay combat ready at all times."
 FRA_improved_screen_ships:0 "Improved Screen Ships"
 FRA_improved_screen_ships_desc:0 "Destroyers and Lighter Cruisers play a key role in defending our heavier Battleships or Carriers. If we lose our line of defence at sea we risk all ships and men. We must make sure our ships are built with the latest technology."
 FRA_capital_ship_focus:0 "Capital Ship Focus"
