Fengtian focus icons and an event plus localization

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -726,13 +726,13 @@ fengtian.new.74.t:0 "Japan Refuses the Bailout"
 fengtian.new.74.d:0 "Despite our pleas, Japan has refused a bailout, leaving us in the same economic position we were before we made the request and with ample humiliation to boot. The only silver lining is that many citizens, even including some employees of Mantetsu, have lost a great deal of faith in Japan's benevolent position toward China."
 fengtian.new.74.a:0 "If only that was more than a metaphor"
 
-fengtian.new.75.t:0 ""
-fengtian.new.75.d:0 ""
-fengtian.new.75.a:0 ""
+fengtian.new.75.t:0 "The State of the Officer Corps"
+fengtian.new.75.d:0 "Fengtian's officer corps is an unusual mix of young Chinese educated at the Rikugun Shikan Gakkō in Japan, older Chinese who served in the Civil Wars, and Japanese officers part of the Military Mission to Fengtian, united by common loyalties to individuals more than any special dedication to the state. Japanese officers in particular are known to prize any station in Fengtian, the devalued currency allowing them to live lives of relative luxury, and hire servants for most menial tasks, earning them the enimity of not only their fellows but also the local population. \n\n Now, with the founding of the Mukden National Academy, these officers have taken the opportunity to mock the academy's current accommodations, specifically a former fabric factory near central Mukden. While a newer modern building rises nearby, the pitiful state of the academy at present leaves the government open to criticism, and much to be desired."
+fengtian.new.75.a:0 "Unfortunate"
 
-fengtian.new.76.t:0 "The State of the Officer Corps"
+fengtian.new.76.t:0 ""
 fengtian.new.76.d:0 ""
-fengtian.new.76.a:0 "Unfortunate"
+fengtian.new.76.a:0 ""
 
 fengtian.new.77.t:0 ""
 fengtian.new.77.d:0 ""
