--- a/localisation/KR_Spain_l_english.yml
+++ b/localisation/KR_Spain_l_english.yml
@@ -5,6 +5,24 @@ mediterranean_economic_block:0 "Member of the Mediterranean Economic Bloc"
 cntfai_supported:0 "supported the CNT-FAI"
 cntfai_given_refuge:0 "has given refuge to the CNT-FAI"
 cntfai_kicked_out:0 "refused to help the CNT-FAI"
+supports_spain_1:0 "Supports the legitimate Spanish government"
+supports_cntfai_1:0 "Supports the CNT-FAI"
+supports_carlist_1:0 "Supports the Carlists"
+supports_us_civil_war_1:0 "Supports Our Side"
+supports_cntfai_2:0 "Supports the CNT-FAI"
+supports_carlist_2:0 "Supports the Carlists"
+supports_us_civil_war_2:0 "Supports Our Side"
+against_spain_1:0 "Opposes the legitimate Spanish government"
+against_cntfai_1:0 "Against the CNT-FAI"
+against_carlist_1:0 "Against the Carlists"
+against_us_civil_war_1:0 "Opposes Our Side"
+against_cntfai_2:0 "Against the CNT-FAI"
+against_carlist_2:0 "Against the Carlists"
+against_us_civil_war_2:0 "Opposes Our Side"
+aided_cntfai:0 "Provided aid to the CNT-FAI"
+aided_carlist:0 "Provied aid to the Carlists"
+aided_spain:0 "Provided aid to the Spanish government"
+aided_us_civwar:0 "Provided aid to our side"
 
 ### Tooltips ###
 SPR_ban_carlists:0 "Carlists will be banned from §Y[SPR.GetNameDef]§!\n"
@@ -31,6 +49,17 @@ SPR_cnt_activities_allowed:0 "CNT activities"
 SPR_cnt_activities_banned:0 "CNT activities"
 SPR_car_activities_allowed:0 "Carlist activities"
 SPR_car_activities_banned:0 "Carlist activities"
+
+CNT_advisors_france:0 "French Assistance"
+CNT_advisors_england:0 "English Assistance"
+CNT_advisors_italysoc:0 "Italian Assistance"
+CNT_advisors_soviet:0 "Soviet Assistance"
+CAR_advisors_portugal:0 "Portuguese Assistance"
+CAR_advisors_austria:0 "Austrian Assistance"
+CAR_advisors_italianfed:0 "Italian Assistance"
+SPR_advisors_natfrance:0 "French Assistance"
+SPR_advisors_russia:0 "Russian Assistance"
+SPR_advisors_germany:0 "German Assistance"
 
 ### Parties ###
 SPR_totalist_party:0 "POUM"
@@ -252,7 +281,7 @@ sprf.7.a:0 "sore wa ii desu ne."
 sprc.1.t:0 "Carlist uprising!"
 sprc.1.d:0 "Disaster - Carlists in the armed forces have united with the remnants of the Requêtes to seize control of Northern Spain! Carlist political organisations are taking over state authorities, the rural clergy are mobilizing the masses, and the pretender has flown in to Burgos to proclaim the beginning of a Second Reconquista to reclaim Spain for a truly Catholic Dynasty!"
 sprc.1.a:0 "We shall fight them!"
-sprc.1.b:0 "Long live Javier I!"
+sprc.1.b:0 "Long live Javier I! (Play as the §YCarlists§!)"
 
 sprc.2.t:0 "Carlist Spain rises up!"
 sprc.2.d:0 "After a century of struggle, the Legitimist Cause has again risen up, to bring justice and Christian rule back to Spain!"
@@ -261,7 +290,7 @@ sprc.2.a:0 "Vivo Cristo Rey!"
 sprc.3.t:0 "CNT uprising!"
 sprc.3.d:0 "An unprecedented week of unrest in Catalonia and Andalusia has left these regions dominated by anarchy. State power has broken down, civil Guard garrisons have been massacred, private plantations and factories have been collectivized by armed workers, and the clergy have been forcibly driven out."
 sprc.3.a:0 "We shall fight to stop this revolution!"
-sprc.3.b:0 "Viva la Revolución!"
+sprc.3.b:0 "Viva la Revolución! (Play as the §YCNT-FAI§!)"
 
 sprc.4.t:0 "CNT Spain rises up! ¡A las barricadas!"
 sprc.4.d:0 "Collectivize and mobilise, for Social Revolution!"
@@ -296,41 +325,6 @@ sprc.106.t:0 "The End of the Spanish War"
 sprc.106.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.106.a:0 "Great!"
 
-sprc.107.t:0 "Civil War in Spain!"
-sprc.107.d:0 "The legitimate Spanish Kingdom under Alfonso XIII is under severe threat from anarchists and fanatics! While many are saying that this provides further proof of the terminal weakness of the House of Bourbon, a secure Spain is an important part of our defensive plans. It could be wise to help the Government put an end to these threats."
-sprc.107.a:0 "Send material and technical experts"
-sprc.107.b:"Spain is of no interest to Austria."
-
-sprc.108.t:0 "Austrian Aid Arrives!"
-sprc.108.d:0 "The Austrian state believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies and military 'experts' to help us in the fight."
-sprc.108.a:0 "Okay"
-
-sprc.109.t:0 "The End of the Spanish War"
-sprc.109.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.109.a:0 "Great!"
-
-sprc.110.t:0 "Civil War in Spain!"
-sprc.110.d:0 "Spain is collapsing into anarchy, and only by offering support of existing govenrnment of Spain can rise of syndicalism or extreme nationalism be prevented. It is widely believed that we should publically organize support for the legal government of Spain, and encourage all Italians to do whatever they CNT defend Spain!"
-sprc.110.a:0 "Publically Support the legal government."
-sprc.110.b:"Remain silent on Spanish affairs."
-
-sprc.111.t:0 "Italian Aid Arrives!"
-sprc.111.d:0 "The Italian Federation believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies and military 'experts' to help us in the fight."
-sprc.111.a:0 "Okay"
-
-sprc.112.t:0 "The End of the Spanish War"
-sprc.112.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
-sprc.112.a:0 "Great!"
-
-sprc.113.t:0 "Civil War in Spain!"
-sprc.113.d:0 "The legitimate Spanish Kingdom under Alfonso XIII is under severe threat from anarchists and fanatics! While many are saying that this provides further proof of the terminal weakness of the House of Bourbon, a secure Spain is an important part of our defensive plans. It could be wise to help the Government put an end to these threats."
-sprc.113.a:0 "Send material and technical experts"
-sprc.113.b:"Spain is of no interest to France."
-
-sprc.114.t:0 "National French Aid Arrives!"
-sprc.114.d:0 "The National French state believes that our success in the present struggle in Spain is essential for the continued stability of Europe, and has sent us considerable amounts of supplies and military 'experts' to help us in the fight."
-sprc.114.a:0 "Okay"
-
 sprc.115.t:0 "The End of the Spanish War"
 sprc.115.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
 sprc.115.a:0 "Great!"
@@ -339,15 +333,6 @@ sprc.115.a:0 "Great!"
 
 ### CNT
 ### volunteers
-
-sprc.201.t:0 "Anarco-Syndicalist Uprising!"
-sprc.201.d:0 "Spain is collapsing into anarchy, and the CNT-FAI is our brother in the supporting the cause of the working class! We should send aid at once!"
-sprc.201.a:0 "Publically Support the CNT-FAI"
-sprc.201.b:0 "Remain silent on Spanish affairs"
-
-sprc.202.t:0 "French Support"
-sprc.202.d:0 "The Commune of France has decided to support our cause in the civil war. They have sent soldiers and aid to support us in the struggle of the workers!"
-sprc.202.a:0 "Good."
 
 sprc.203.t:0 "The End of the Spanish War"
 sprc.203.d:0 "For good or ill, the Spanish war is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
