Fengtian tree work (naval branch)

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -234,8 +234,8 @@ FNG_Reorganize_the_Coastal_Defence_Forces:0 "Reorganise the Coastal Defence Forc
 FNG_Reorganize_the_Coastal_Defence_Forces_desc:0 "Because the Fengtian Navy has no realistic way of opposing the larger and newer navy fielded by Qing, its main purpose is coastal defence. In light of recent troubling inadequacies, such as one ship's crew selling their armament, extensive reorganisation and reform is necessary."
 FNG_Expand_Yingkou_Naval_Yard:0 "Expand Yingkou Naval Yard"
 FNG_Expand_Yingkou_Naval_Yard_desc:0 "Yingkou is the Northeast Region's second largest port, after Japanese-held Dalian, and the home of our Navy. If we are to begin any meaningful naval reconstruction project, expansion of the Yingkou Naval Yard is an essential first step."
-FNG_The_Eight_Points_Strategy:0 "The Eight Points Strategy"
-FNG_The_Eight_Points_Strategy_desc:0 "The severe asymmetry in strength between the Fengtian and Qing navies means that, in the absence of Japanese support, our entire coast will be at risk of invasion. Japanese strategists have outlined eight positions at which naval landings are most likely, and drafted plans for their defence."
+FNG_The_Nine_Points_Strategy:0 "The Eight Points Strategy"
+FNG_The_Nine_Points_Strategy_desc:0 "The severe asymmetry in strength between the Fengtian and Qing navies means that, in the absence of Japanese support, our entire coast will be at risk of invasion. Japanese strategists have outlined nine positions at which naval landings are most likely, and drafted plans for their defence."
 FNG_Regular_River_Patrols:0 "Regular River Patrols"
 FNG_Regular_River_Patrols_desc:0 "The Navy possesses number of small patrol boats, occasionally used to police the Yalu and Songhua rivers, but the majority of which are currently rusting away in storage. These might be better used to train our crews and maintain our internal security, if we can find the funding."
 #Air Force Branch
