Adjustments to loc changes

--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -262,7 +262,7 @@ FRA_autoroutes:0 "The Autoroutes"
 FRA_autoroutes_desc:0 "The highways proved a massive boon to the economy and worker mobility in urban regions, now an ambitious plan has been put forward to expand them to the whole country! Linking every corner of our country will have a massive impact on our regional development and can only benefit the Revolution."
 
 FRA_eco_direction:0 "Direction of the Economy"
-FRA_eco_direction_desc:0 "While our economy is more fair to the workers and generally quite potent while reactionary economies live and die on the whims of capitalists, internal conflicts have prevented us from steering our economy. Is is time to call for a meeting of the BGT, so that these questions are once and for all settled by one the Commune's faction."
+FRA_eco_direction_desc:0 "Our economy is more fair to the workers and generally quite potent while reactionary economies live and die on the whims of capitalists, but internal conflicts have prevented us from steering our economy. Is is time to call for a meeting of the BGT, so that these questions are once and for all settled by one the Commune's faction."
 FRA_orth_syndicalism:0 "Orthodox Syndicalism"
 FRA_orth_syndicalism_desc:0 "Benoît Frachon is the new economy minister of the Commune. A Travailleur, he is a proponent of Orthodox Syndicalism, a policy rather familiar to most as it is the one that has guided France for the last two decades. With some reforms, we will not have to choose between stability and efficiency."
 FRA_reduce_unemploy:0 "Reducing Unemployment"
@@ -350,11 +350,11 @@ FRA_military_buildup_desc:0 "To prepare for the upcoming war, we will need to de
 FRA_military_buildup_two: "Calibrating the Economy"
 FRA_military_buildup_two_desc:0 "The capitalist world is still struggling with last year's shattering economic crisis whilst the righteousness of our own system continues to prove itself. It has been suggested that we utilise this industrial advantage to transform certain aspects of the economy exclusively towards military purposes."
 FRA_socialist_education:0 "Socialist Education"
-FRA_socialist_education_desc:0 "The education of the old reactionary France has always been backwards, misaimed at beating down the average citizen with discipline and hierarchy. While we still aim to teach our children the values of the Commune, all the time saved by removing reactionary brainwashing can be invested in the sciences and arts."
+FRA_socialist_education_desc:0 "The education of the French Republic was in many ways excellent, allowing the average citizen to obtain a large knowledge in the sciences and arts. We seek to continue working on this legacy by ensuring that French schools always have learning and education as their primary goal, not hierarchy and discipline like in some reactionary countries."
 FRA_Our_time_has_come:0 "Revanchist Propaganda"
 FRA_Our_time_has_come_desc:0 "Our desire of revenge against Germany has been long coming. 1871 saw us lose Alsace-Lorraine, and the Republican schools rightfully taught their children that it was a French region soon to be seized back. Sadly, 1919 saw our defeat and the loss of Nancy. But we are not done, our rightful anger shall only end when France is whole again!"
 FRA_department_revolutionary_ideals:0 "Department of Revolutionary Ideals"
-FRA_department_revolutionary_ideals_desc:0 "While the empirical teachings prove themselves easily, the virtues of the Commune are harder to communicate to our population. While omnious sounding, we must create an institution ready to help us teach and prove the value of the Revolution to our citizens and prevent reactionary influences from implanting themselves."
+FRA_department_revolutionary_ideals_desc:0 "While the empirical teachings prove themselves easily, the virtues of the Commune are harder to communicate to our population. While omnious sounding, we must create an institution ready to help us remind to our people the value of the Revolution and prevent reactionary influences from implanting themselves."
 FRA_Blanqui_Research_Institute:0 "Blanqui Research Institute"
 FRA_Blanqui_Research_Institute_desc:0 "While some nations resist the teachings of science, France endorses them without nuance. Let's support the establishment of a new research institute aimed at furthering our technological superiority. Where reactionaries doubt every discovery and stand wary of change, we embrace them and become stronger every year!"
 FRA_military_buildup_three: "Further Military Development"
